fixed overflow

--- a/src/components/Pages/Profile.css
+++ b/src/components/Pages/Profile.css
@@ -13,6 +13,7 @@ body {
 .profile-header {
     font-size: 5rem;
     text-shadow: 5px 5px 0px gray;
+    overflow: hidden;
 }
 
 /* this is the personal info and attributes */
